<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#ffffff"
  >
  <include
    layout="@layout/base_app_bar_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />
  <ScrollView
    android:id="@+id/sv_add_or_edit"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/base_app_bar"
    app:layout_constraintBottom_toBottomOf="parent"
    android:overScrollMode="never"
    >
    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_add_or_edit_pay_title"
        style="@style/AddOrEditTitleStyle"
        android:text="@string/add_or_edit_pay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        />
      <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_add_or_edit_pay_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_add_or_edit_pay_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_or_edit_pay_title"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@drawable/et_bg"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        android:nextFocusForward="@+id/et_add_or_edit_remarks"
        />
      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_add_or_edit_tag"
        style="@style/AddOrEditTitleStyle"
        app:layout_constraintTop_toBottomOf="@+id/et_add_or_edit_pay_value"
        app:layout_constraintLeft_toLeftOf="@+id/et_add_or_edit_pay_value"
        android:layout_marginTop="20dp"
        android:text="@string/add_or_edit_tag"
        />
      <com.littlegnal.accounting.ui.addedit.SingleCheckTagLayout
        android:id="@+id/fbl_tag_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_add_or_edit_tag"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_or_edit_tag"
        tools:layout_editor_absoluteY="134dp"/>
      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_add_or_edit_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/fbl_tag_container"
        app:layout_constraintTop_toBottomOf="@+id/fbl_tag_container"
        android:layout_marginTop="20dp"
        android:text="@string/add_or_edit_date"
        />
      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_add_or_edit_date_value"
        style="@style/AddOrEditTitleStyle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_add_or_edit_date_title"
        app:layout_constraintBottom_toBottomOf="@+id/tv_add_or_edit_date_title"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textColor="#888888"
        android:text="@string/add_or_edit_select_date_tips"
        />
      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_add_or_edit_remarks_title"
        style="@style/AddOrEditTitleStyle"
        app:layout_constraintLeft_toLeftOf="@+id/tv_add_or_edit_date_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_or_edit_date_title"
        android:layout_marginTop="20dp"
        android:text="@string/add_or_edit_remarks"
        />
      <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_add_or_edit_remarks"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_add_or_edit_remarks_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_or_edit_remarks_title"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@drawable/et_bg"
        android:gravity="top|start"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        />
      <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_add_or_edit_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_or_edit_confirm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_or_edit_remarks"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:textColor="@color/add_or_edit_confirm_btn_text_color"
        android:enabled="false"
        />
    </android.support.constraint.ConstraintLayout>
  </ScrollView>
</android.support.constraint.ConstraintLayout>